# uk_rentals_bot

./: .gitignore  Dockerfile  README.md  config.yml  docker-compose.yml  example_config.json  example_config.yml  openrent.py  pyproject.toml  requirements.txt  rightmove.py  scrape.py  utils.py
data/: config.yml  example_config.yml
src/: openrent.py  rightmove.py  scrape.py
